[project]
name = "metaflow-uv"
version = "0.1.0"
description = "Nothing important."
authors = [
    { name = "Jordan Melendez" }
]
requires-python = ">=3.11"
dependencies = [
    "metaflow>=2.15.14",
    "numpy==1.26.4",
    "pandas==2.0.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pylint>=3.3.6",
]
